[package]
name = "generic-octree"
version = "0.3.2"
authors = [
            "Thomas \"nwmqpa\" Nicollet <thomas.nicollet@epitech.eu>",
            "Alexandre \"Afourcat\" Fourcat <alexandre.fourcat@epitech.eu>",
          ]
edition = "2018"
description = "Simple generic implementation of a linear Octree"
license = "Apache-2.0"
readme = "README.md"


[dependencies]
serde = { version = "1.0.*", features = ["derive"], optional = true }
dot_vox = { version = "2.0.0", optional = true}
bincode = { version = "1.2.1", optional = true}
flate2 =  { version = "1.0", features = ["zlib"], optional = true, default-features = false }
rayon  = "1.3.0"

[features]
serialize = ["serde", "flate2"]
dot_tree = ["serialize", "bincode"]
vox = ["dot_vox"]

[dev-dependencies]
color-rs = "0.5.0"

[[example]]
name = "optimal_convert"
required-features = ["vox", "dot_tree"]