[package]
name = "generic-octree"
version = "0.4.0"
authors = [
            "Thomas \"nwmqpa\" Nicollet <thomas.nicollet@epitech.eu>",
            "Alexandre \"Afourcat\" Fourcat <alexandre.fourcat@epitech.eu>",
          ]
edition = "2018"
description = "Simple generic implementation of a linear Octree"
license = "Apache-2.0"
readme = "README.md"


[dependencies]
serde = { version = "1.0.*", features = ["derive"], optional = true }
dot_vox = { version = "2.0.0", optional = true}
bincode = { version = "1.2.1", optional = true}
flate2 =  { version = "1.0", features = ["zlib"], optional = true, default-features = false }
genmesh = { version = "0.6.2", optional = true }
rendy = {version = "0.5.*", optional = true, default-features = false, features = ["mesh"]}
petgraph = {version = "0.5.0", optional = true }
lazy_static = {version = "1.4.0", optional = true }
color-rs = {version = "0.5.0", optional = true }
rayon  = "1.3.0"

[features]
serialize = ["serde", "flate2"]
dot_tree = ["serialize", "bincode"]
render = ["genmesh", "rendy", "lazy_static", "color-rs", "petgraph"]
vox = ["dot_vox"]

[[example]]
name = "main"
required-features = ["color-rs"]

[[example]]
name = "optimal_convert"
required-features = ["vox", "dot_tree"]

[[example]]
name = "create_vertices"
required-features = ["render", "dot_tree"]