[package]
name = "generic-octree"
version = "0.5.2"
authors = [
            "Thomas \"nwmqpa\" Nicollet <thomas.nicollet@epitech.eu>",
            "Alexandre \"Afourcat\" Fourcat <alexandre.fourcat@epitech.eu>",
          ]
edition = "2018"
description = "Simple generic implementation of a linear Octree"
license = "Apache-2.0"
readme = "README.md"

[profile.release]
debug = true

[dependencies]
hashbrown = { version = "0.7.2", features = ["serde", "rayon"] }
serde = { version = "1.0.*", features = ["derive"], optional = true }
dot_vox = { version = "2.0.0", optional = true}
bincode = { version = "1.2.1", optional = true}
serde_cbor = {version = "0.11.1", optional = true}
flate2 =  { version = "1.0", features = ["zlib"], optional = true, default-features = false }
petgraph = {version = "0.5.0", optional = true }
color-rs = {version = "0.5.0", optional = true }
rayon  = "1.3.0"

[features]
serialize = ["serde", "flate2"]
dot_tree = ["serialize", "bincode", "serde_cbor"]
render = ["color-rs", "petgraph"]
vox = ["dot_vox"]

[[example]]
name = "main"
required-features = ["color-rs"]

[[example]]
name = "optimal_convert"
required-features = ["vox", "dot_tree"]

[[example]]
name = "create_vertices"
required-features = ["render", "dot_tree"]